# Programming_ressources

./: .gitignore  .gitignore~  test1.txt  test2.txt
EffectiveC++/: CMakeLists.txt  Corps.cpp  Corps.h  DesignPatternComposite.cpp  DesignPatternComposite.h  EfficientException.cpp  EfficientException.h  NombreContraint.cpp  NombreContraint.h  main.cpp  mainTest.cpp  test.cpp
PUMPS+AI_18/: 01_gather.GPU  CMakeCache.txt
PUMPS+AI_18/01_scatter/: main.cu
PUMPS+AI_18/02_gather/: main.cu
PUMPS+AI_18/03_binning/: main.cu  rai_build.yml
PUMPS+AI_18/04_basic_conv/: main.cu
PUMPS+AI_18/WebGPU training/: 03 - Lab Basic Matrix Multiplication .c  06 - Lab Histogram.c
PUMPS+AI_18/binning/: helper.hpp  log_GPUvsCutOFF
WebGPU training/: 00_common.h  01 - Lab Tour with Device Query.c  02 - Lab Vector Addition.c  04 - Lab Tiled Matrix Multiplication.c  05 - Lab Scan.c  07 - Lab Convolution (stencil).c  README.md
_LINUX_/: emacs  tmux.conf
_PYTHON_/Pycharm_PythonNote/: test.py
_PYTHON_/sphinx/: make.bat
